Bug 39519 - Copy slide by drag and drop causes double use of user defined slide name
Summary: Copy slide by drag and drop causes double use of user defined slide name
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2011-07-25 02:37 UTC by Rainer Bielefeld Retired
Modified: 2025-01-11 17:13 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample document, pls. see original report! (11.55 KB, application/vnd.oasis.opendocument.graphics)
2011-07-25 02:37 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2011-07-25 02:37:04 UTC
Created attachment 49494 [details]
Sample document, pls. see original report!

Found with "LibreOffice 3.4.1 RC2 - WIN7  Home Premium (64bit) German UI [OOO340m1 (Build:202)]":

When I create a new DRAW slide by strg + drag / drop with the new slide has the same name as the source, what causes problems with navigator.

Steps to reproduce:
1. open attached "sample.odg"
2. Activate 'Navigator' pane if necessary
3. select slide "Neu05" by doble click in Navigator
   Slide No 6 will be marked as selected in Slide View Pane
4. <ctrl>, then drag and drop slide no 6 before slide no 5
5. release mouse button (and <ctrl> inserts new slide, copy of Slide No 6 
   Expected: New slide, with new name
   Actual: New slide also with name "Neu05", see in Navigator:
           "... - Neu03 - Neu05 - Neu04 - Neu05 - Neu06 - ..."
           2 times used "Neu05"
You will not be able to switch between slides "Neu05" using Navigator.

Same problem with Presentation and user defined slide names.

Also watched with:

Master "LibO-dev 3.4.5  – WIN7  Home Premium  (64bit) English UI [(Build ID:d337f79-a24c961-2865670-9752b71-7f8fd43
	2fdd60d-fd28b6a-fd7bf20-aa369cb-28da3fb
	6a9633a-931d089-ecd263f-c9b55e9-b31b807
	82ff335-599f7e9-bc6a545-1926fdf)]"

"LibreOffice Portable 3.3.3  - WIN7  Home Premium (64bit) German UI [OOO330m19 (Build:301  Tag 3.3.3.1)]" 

OOo 3.1.1

So heritage from OOo, Version -> First LibO Version
NEW because observed in various independent versions.
Comment 1 Jeffrey 2011-07-26 07:43:52 UTC
Confirmed for both LibO Master and LibreOffice 3.4  340m1(Build:103) for OpenSuse Linux. Thanks for the steps and attachment.
Comment 2 Rainer Bielefeld Retired 2011-07-26 08:03:37 UTC
Confirmed due to Comment 1

Assign to Thorsten because I don't know anyone for DRAW.

@Thorsten:
Please feel free to reassign if it’s not your area.
Comment 3 Björn Michaelsen 2011-12-23 13:26:57 UTC
Since all new unconfirmed bugs start in state UNCONFIRMED now and old unconfirmed bugs were moved to NEEDINFO with a explanatory comment, all bugs promoted above those bug states to NEW and later are automatically confirmed making the CONFIRMED whiteboard status redundant. Thus it will be removed.
Comment 4 ign_christian 2013-06-17 08:32:21 UTC
Not reproducible while trying with Draw & Impress (LO 4.0.4.2 - Win7 32bit)
Comment 5 Rainer Bielefeld Retired 2017-12-17 12:36:24 UTC
I still see this problem with Version: 5.4.2.2 Build-ID: 22b09f6418e8c2d508a9eaf86b2399209b0990f4 CPU-Threads: 4; Betriebssystem:Windows 6.1; UI-Render: Standard; Gebietsschema: de-DE (de_DE); Calc: group

Might be related to particular documents or other circumstances, I will do some more investigation.
Comment 6 Rainer Bielefeld Retired 2017-12-17 12:52:19 UTC
Still REPRODUCIBLE with original sample document and  Version: 6.1.0.0.alpha0+ (x64)
Build ID: 77adb770164fd703a31d8e828d777a4f827a5407  CPU threads: 4; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2017-12-17_03:10:29
Locale: de-DE (de_DE); Calc: CL

@Björn Michaelsen:
"Not reproducible" means
a) I cant create new slides that way at all?
b) My newly created slide gets a new name "xxx"
c) something else?
Comment 7 Thomas Lendo 2018-09-24 18:43:59 UTC
Is this reproducible with other documents? The issue will hardly fixed if it's a single file problem.
Comment 8 QA Administrators 2019-09-25 03:00:49 UTC Comment hidden (obsolete)
Comment 9 QA Administrators 2021-09-25 03:39:39 UTC Comment hidden (obsolete)
Comment 10 Andreas Heinisch 2023-07-20 09:03:33 UTC
Repro in:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cf5142abbf1ea358e187f1d160c6b339ea11c0b9
CPU threads: 16; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: CL threaded
Comment 11 Commit Notification 2023-08-25 12:11:20 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/139cffc531277b57bae8e272fef13af00ace5366

tdf#39519 - Rename slide if its name is not unique

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.