tdf#39519 - Rename slide if its name is not unique

For instance, if a slide is copied by ctrl + drag and drop (DND_ACTION_COPY)

Change-Id: I1c669c299a38431680ce602922c1e2c7f117a2ab
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154838
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>